Fix margin and overflow

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -10,6 +10,7 @@
 @import 'components/all';
 
 html, body {
+  overflow-x: hidden;
   overscroll-behavior: none;
 }
 
